syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.UserStatuses";

import "UserStatuses/Models.proto";

service UserStatusesApi {
  rpc GetByIds(GetUserStatusesByIdsRequest) returns (GetUserStatusesByIdsResult);
}
